// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Nav
    buttons={
      Array [
        Object {
          "icon": "dashboard",
          "id": "item1",
          "label": "Item 1",
        },
      ]
    }
    classes={
      Object {
        "@media (max-width: 767px)": "@media (max-width: 767px)",
        "@media (min-width: 768px)": "@media (min-width: 768px)",
        "activeItem": "activeItem",
        "icon": "icon",
        "listAnchor": "listAnchor",
        "listItem": "listItem",
        "menu": "menu",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li
          className="listItem "
          id="item1"
          onClick={undefined}
        >
          <Jss(Icon)
            className="icon"
            colors={undefined}
            iconName="dashboard"
          />
          <a
            className="listAnchor"
          >
            Item 1
          </a>
        </li>,
      ],
      "className": "menu",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "item1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Icon)
              className="icon"
              colors={undefined}
              iconName="dashboard"
            />,
            <a
              className="listAnchor"
            >
              Item 1
            </a>,
          ],
          "className": "listItem ",
          "id": "item1",
          "onClick": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "icon",
              "colors": undefined,
              "iconName": "dashboard",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Item 1",
              "className": "listAnchor",
            },
            "ref": null,
            "rendered": "Item 1",
            "type": "a",
          },
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="listItem "
            id="item1"
            onClick={undefined}
          >
            <Jss(Icon)
              className="icon"
              colors={undefined}
              iconName="dashboard"
            />
            <a
              className="listAnchor"
            >
              Item 1
            </a>
          </li>,
        ],
        "className": "menu",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "item1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Icon)
                className="icon"
                colors={undefined}
                iconName="dashboard"
              />,
              <a
                className="listAnchor"
              >
                Item 1
              </a>,
            ],
            "className": "listItem ",
            "id": "item1",
            "onClick": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": "icon",
                "colors": undefined,
                "iconName": "dashboard",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item 1",
                "className": "listAnchor",
              },
              "ref": null,
              "rendered": "Item 1",
              "type": "a",
            },
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NavJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Nav)
    buttons={
      Array [
        Object {
          "icon": "dashboard",
          "id": "item1",
          "label": "Item 1",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "buttons": Array [
        Object {
          "icon": "dashboard",
          "id": "item1",
          "label": "Item 1",
        },
      ],
      "classes": Object {
        "activeItem": "Nav-activeItem-0-1-4",
        "icon": "Nav-icon-0-1-3",
        "listAnchor": "Nav-listAnchor-0-1-5",
        "listItem": "Nav-listItem-0-1-2",
        "menu": "Nav-menu-0-1-1",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "buttons": Array [
          Object {
            "icon": "dashboard",
            "id": "item1",
            "label": "Item 1",
          },
        ],
        "classes": Object {
          "activeItem": "Nav-activeItem-0-1-4",
          "icon": "Nav-icon-0-1-3",
          "listAnchor": "Nav-listAnchor-0-1-5",
          "listItem": "Nav-listItem-0-1-2",
          "menu": "Nav-menu-0-1-1",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
